Fix contrast in home slider

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,6 +47,7 @@
   --text-color: #444;
   --text-color-secondary: #606060;
   --text-color-on-black-background: #fefefe;
+  --text-color-secondary-on-black-background: #e7e7e7;
   --label-text-color: #757575;
   --accent-color: #606163;
   --author-list-item-title-color: #bd2020;
